2010-01-20  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.6
	* Application class not inheriting from Gtk::Main (LP: #509029)
	* Fixed Exception: Read timeout at me-tv startup (Clear QAM) (LP: #509040)

2010-01-17  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.5
	* More tweaks to the EPG event UI
	* Added check for EPG events before starting EPG thread
	* Fixed information on meters dialog
	* Changed demux filter to only except exact table types by default

2010-01-16  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.4
	* Heap corruption during channel scanning (LP: #505454)
	* EPG Detail "description" shows only the subtitle (LP: #503051)
	* Not removing display stream when stopping recordings (LP: #506078)
	* Added sl translation

2010-01-09  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.3
	* Use GLib/Gio instead GNet (LP: #503214)
	* Removed deprecated libgnome/ui dependency (LP: #503219)
	* Applied patch from Ludwig Nussel to fix compile error on glibmm 2.16.1
	* Added PES type 0x80 to be a recognised video stream
	* Fix for FTBFS on Debian GNU/Linux 5.0 (LP: #503910)
	* Removed GTK+ 2.16 requirement from UI file
	* EPG now honours the version number field and updates EPG events

2010-01-04  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.2
	* EPG now reads CVCT to get source_id (LP: #502306)
	* Added missing bit for PID calculation (LP: #502660)

2010-01-02  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.1
	* Tell demuxer to only get PMTs (LP: #501986) 

2010-01-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.0
	* Fixed faulty clean rule for new schemas file: (LP: #493132)
	* Better ATSC support
	* Added audio stream type 0x11 to PMS parser
	* Implemented make_directory_with_parents to remove dependency on GLib 2.18
	* Split out MPEG tables from DVB SI tables
	* Added recording icon to channel buttons
	* Added recording icon to EPG buttons
	* Right-click instant record on channel buttons